--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 body {
   font-family: sans-serif;
@@ -66,6 +66,6 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground to-orange dark:from-dark-100 dark:to-dark-700 my-8 grid grid-cols-12 gap-6 bg-gradient-to-tr from-blue-800 bg-fixed px-5 md:mb-16 md:px-32 lg:mb-0 lg:px-10 lg:pb-5 xl:px-32 dark:text-white;
   }
 }
